<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="5dp">
    
    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background ="@color/grey" >
	    
	    <TextView
	        android:id="@+id/username_prompt"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="20sp"
	        android:textColor="@color/black"
	        android:text="@string/user_prompt" />
	    
	    <EditText
	        android:id="@+id/username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:background="@drawable/edit_text_background"
	        android:padding="5dp"
	        android:textSize="20sp"
	        android:textColor="@color/black"
	        android:hint="@string/user_hint" />
    
	    <TextView
	        android:id="@+id/password_prompt"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:textColor="@color/black"
	        android:text="@string/password_prompt" />
    
	    <EditText
	        android:id="@+id/pass_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:background="@drawable/edit_text_background"
	        android:padding="5dp"
	        android:textSize="20sp"
	        android:textColor="@color/black"
	        android:hint="@string/password_hint" />
	    
	    <Button 
	        android:id="@+id/exit_user_password"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="40dp"
	        android:text="@string/save"/>
	    
    </LinearLayout>
    
</LinearLayout>