<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/popup_width"
    android:layout_height="@dimen/popup_height"
    android:background="@color/grey"
    android:padding="3dp" >
	<RelativeLayout
	    android:layout_gravity="center"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/black">
	    
	    <TextView 
	        android:id="@+id/popup_prompt_text"
	        android:text="@string/create_new_list"
	        android:textSize="24sp"
	        android:textColor="@color/white"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	    
	    <TextView 
	    	android:id="@+id/enter_name_prompt_text"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"    
	        android:layout_below="@+id/popup_prompt_text"
	       	android:layout_marginTop="60dp"
	       	android:padding="5dp"
	        android:text="@string/graph_list_name"
	        android:textSize="18sp"
	        android:textColor="@color/white"
	        />
	   
	    <EditText 
	        android:id="@+id/list_title"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/popup_prompt_text"
	    	android:layout_marginTop="60dp"
	    	android:layout_toRightOf="@+id/enter_name_prompt_text"
	    	android:layout_marginLeft="25dp"
	    	android:padding="5dp"
	    	android:background="@drawable/edit_text_background"	
	    	android:hint="@string/graph_list_title_hint"
	    	android:singleLine="true"
	    	android:textSize="18sp"
	    	android:textColor="@color/black"	
	    	/>
	     
	    <TextView
	        android:id="@+id/subtitle_prompt_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/enter_name_prompt_text"
	        android:layout_marginTop="5dp"
	        android:padding="5dp"
	        android:text="@string/graph_list_subtitle"
	        android:textSize="18sp"
	        android:textColor="@color/white" />
	    
	    <EditText
	        android:id="@+id/list_subtitle"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_below="@+id/enter_name_prompt_text"
	        android:layout_marginTop="5dp"
	        android:layout_toRightOf="@+id/subtitle_prompt_text"
	        android:layout_marginLeft="10dp"
	        android:padding="5dp"
	        android:background="@drawable/edit_text_background"
	        android:hint="@string/graph_list_subtitle_hint"
	        android:singleLine="true"
	        android:textSize="18sp"
	        android:textColor="@color/black" />

		<Button
		    android:id="@+id/exit_popup"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentBottom="true"
		    android:layout_marginLeft="15dp"
		    android:layout_marginBottom="15dp"
		    android:text="@string/return_lists"
		    android:textColor="@color/white"
		    android:textSize="12sp" />    
	    
		<Button
		    android:id="@+id/create_list"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentBottom="true"
		    android:layout_marginRight="15dp"
		    android:layout_marginBottom="15dp"
		    android:text="@string/create_graph_list"
		    android:textColor="@color/white"
		    android:textSize="12sp" />
		
	</RelativeLayout> 
	
</LinearLayout>