<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/row_height"
    android:background="@drawable/row_background">
	<LinearLayout 
	    android:id="@+id/graph_list_count"
	    android:layout_width="@dimen/row_height"
	    android:layout_height="@dimen/row_height"
	    android:background="@color/grey"
	    android:padding="2dp" >
	    
	    <RelativeLayout
	        android:layout_height="76dp"
	        android:layout_width="76dp"
	        android:background="@color/white" >
	        
	        <TextView 
	            android:id="@+id/number_description"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="3dp"
	            android:text="@string/list_total"
	            android:textSize="14sp"
	            android:textColor="@color/black"
	            />
	        
	        <TextView
	            android:id="@+id/count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:paddingTop="10dp"
	            android:textSize="50sp"
	            android:textColor="@color/black" />
	        
		</RelativeLayout>
    
    </LinearLayout>
    <TextView 
        android:id="@+id/cell_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/graph_list_count"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    
    <TextView
        android:id="@+id/subtitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/graph_list_count"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/cell_title"
        android:textSize="16sp"
        android:textColor="@color/grey" />
    
    <ImageView 
        android:contentDescription="@string/arrow"
        android:id="@+id/select_arrow"
        android:src="@drawable/forward"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:layout_centerVertical="true"
        />
    
    <ImageView 
        android:contentDescription="@string/exit"
        android:id="@+id/delete_item"
        android:src="@drawable/exit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignLeft="@+id/select_arrow"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        />
    
</RelativeLayout>